[package]
name = "yp_quote"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
crossbeam-channel = "0.5.15"
rand = "0.10.0"
serde = { version = "^1.0", features = ["derive"] }
serde-binary-adv = "1.1.0"
thiserror = "2.0.18"

[[bin]]
name = "quote_server"
path = "src/main.rs"

[[bin]]
name = "quote_client"
path = "src/client.rs"
